Changes for 1.8.10rc1

..F....... [ZBX-2419] fixed calculation of SLA if uptime/downtime is specified (Sasha)
..F....... [ZBX-3074] status rollback to right side (slava)
A......... [ZBX-3104] implemented the screen item API (pavels)
A.F....... [ZBX-3104] fixed screen item "Parameter" field validation and some minor screen item bugs (pavels)
A......... [ZBX-3104] implemented the screen item API (pavels)
A.F....... [ZBX-3104] fixed screen item "Parameter" field validation and some minor screen item bugs (pavels)
........S. [ZBX-4298] added deleted data report to a housekeeper on every step (dimir)
..F....... [ZBX-3649] fixed "frontends/php/styles/ie_default.css" doesn't exist (for IE6) (sanja)
A.F....... [ZBX-4235] fixed operations with decimal numbers for certain locales (pavels)
..F....... [ZBX-3244] fixed dropdown changing its style when navigating menu (sanja)
A.F....... [ZBX-4015] fixed multiple XSS issues (pavels)
A.F....... [ZBX-4288] fixed user macros not being deleted when deleting a host (pavels)
A.F....... [ZBX-2859] fixed possibility to successfully delete zero regular expressions (sanja)
..F....... [ZBX-2843] made dashboard and slideshow popup menus have dynamic width (sanja)
A.F....... [ZBX-4279] added an error message when trying to delete an item, that's being used as a min/max Y axis value for graphs (pavels)
..F....... [ZBX-4375] updated Russian translation; thanks to Alexey Pustovalov (Richlv)
........S. [ZBX-4360] fixed trapper compilation error on FreeBSD 7.3 (dimir,asaveljevs)
A.F....... [ZBX-4249] fixed trigger wizard when inserting macro multiple times (Vedmak)
..F....... [ZBX-4351] updated French translation; thanks to Joseph Bueno (Richlv)
..F....... [ZBX-4353] updated Japanese translation; thanks to Kodai Terashima (Richlv)

Changes for 1.8.9

1.8.9rc2 was released as 1.8.9 without any changes

Changes for 1.8.9rc2

 - [ZBX-4352] fixed template linking when mass updating hosts (pavels,Vedmak)

Changes for 1.8.9rc1
