@@ -1,5 +1,6 @@
 Changes for 1.8.10rc1
 
+.......PS. [ZBX-4376] fixed escaping of strings with PostgreSQL 9.1 or later (Sasha)
 ..F....... [ZBX-2419] fixed calculation of SLA if uptime/downtime is specified (Sasha)
 ..F....... [ZBX-3074] status rollback to right side (slava)
 A......... [ZBX-3104] implemented the screen item API (pavels)
